# treatment-rule-extrapolation-part-I

./: .gitignore  pyproject.toml
data/: cluster_ate_dataset.py  cluster_cate_dataset.py  collate.py  collate_ate.py  feature_engineering.py
data/preprocess/: create_xgrid.py  group_statistics.py  rebalance_outcomes.py
models/: deepset_ate_set2set.py  deepset_set2set.py  solver_socp.py
notebooks/: Experiment_2.ipynb
train/: loops.py  loops_ate.py
utils/: seed.py
